--- a/app/auth/auth.module.scss
+++ b/app/auth/auth.module.scss
@@ -13,7 +13,7 @@
   align-items: center;
   gap: 20px;
 
-  h1 {
+  .authContainer h1 {
     font-size: 2.2rem;
     font-weight: 800;
     margin-bottom: 1rem;
